--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <footer>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         <a href="./index.html">WebStudio</a>
+        <p>Lorem, ipsum dolor.</p>
     </footer>
 </body>
 </html>
