--- a/index.html
+++ b/index.html
@@ -3,112 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBSTUDIO</title>
+    <title >WEBSTUDIO</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-        <ul>
-            <li>
-                <a href="">Studio</a>
+    <header class="header">
+        <nav class="header-navigation">
+            <a href="./index.html" class="header-logo"><Span class="accent">WEB</Span>STUDIO</a>
+        <ul class="header-menu-list">
+            <li class="header-menu-item">
+                <a href="" class="header-menu-link">Studio</a>
             </li>
-            <li>
-                <a href="">Portfolio</a>
+            <li class="header-menu-item">
+                <a href="" class="header-menu-link">Portfolio</a>
             </li>
-            <li>
-                <a href="">Contacts</a>
+            <li class="header-menu-item">
+                <a href="" class="header-menu-link">Contacts</a>
             </li>
         </ul>
         </nav>
-        <address>
-       <ul>
-       <li>
+        <address class="header-adderes">
+       <ul class="addres-menu-list">
+       <li class="addres-menu-item" class="header-menu-link">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </li>
-        <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <li class="addres-menu-item">
+            <a href="tel:+110001111111" class="header-menu-link">+11 (000) 111-11-11</a>
         </li>
        </ul>
         </address>
     </header>
-    <main>
-        <address>
-            <button type="button">Request a callback</button>
-          Call us: <a href="tel:+070174069900">+070174069900</a><br />
-          Email us:
-          <a href="mailto:fatnessescape@doit.com">fatnessescape@doit.com</a><br />
-          You may also want to visit us:<br />
-          Lorem Foundation<br />
-          332 E Jacked Ave<br />
-          Mountain View, CA 94041<br />
-          USA
-        </address>
-        <section>
-        <h1> Effective Solutions for Your Business </h1>
-        <button type="button">Order Service</button>
+    <main class="main">
+        <section class="background-header">
+        <h1 class="main-header"> Effective Solutions for Your Business </h1>
+        <button type="button" class="button">Order Service</button>
         </section>
 
-        <section>
-            <h2 >Second header</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+        <section class="features">
+            <h2 class="features-header">Second header</h2>
+            <ul class="features-menu-list">
+                <li class="features-menu-item">
+                    <h3 class="features-item-subtitle">Strategy</h3>
+                    <p class="feature-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
-                     <h3>Punctuality</h3>
-                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="features-menu-item">
+                     <h3 class="features-item-subtitle">Punctuality</h3>
+                     <p class="feature-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                  <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="features-item-subtitle">Diligence</h3>
+                    <p class="feature-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="features-menu-item">
+                    <h3 class="features-item-subtitle">Technologies</h3>
+                    <p class="feature-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
                 </ul>
         </section>
-        <section>
-            <h2>Our Team</h2> й
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-header">Our Team</h2>
+            <ul class="team-menu-list">
+                <li class="team-menu-item">
                     <img src="./images/img_1.jpg" alt="Mark Guerrero"
                     width='264'
                     height='260'>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-item-subtitle">Mark Guerrero</h3>
+                    <p class="team-item-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-menu-item">
                     <img src="./images/img_2.jpg" alt="Tom Ford" 
                     width='264'
                     height='260'> 
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-item-subtitle">Tom Ford</h3>
+                    <p class="team-item-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img_3.jpg" alt="Camila Garcia" 
                     width='264'
                     height='260'>
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-item-subtitle">Camila Garcia</h3>
+                    <p class="team-item-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-menu-item">
                     <img src="./images/img_4.jpg" alt="Daniel Wilson" 
                     width='264'
                     height='260'> 
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-item-subtitle">Daniel Wilson</h3>
+                    <p class="team-item-text">UI Designer</p>
                 </li>
             </ul>
         </section>
-    </main>
+            <section class="portfolio">
+                <h2 class="portfolio-header">Our Portfolio</h2>
+                <Ul class="portfolio-menu-list">
+                    <li class="portfolio-menu-item">
+                        <img src="./images/img_5.jpg" alt="Banking App">
+                        <h3 class="portfolio-item-subtitle">Banking App</h3>
+                        <p class="portfolio-item-text">App</p>
+                    </li>
+                    <li class="portfolio-menu-item">
+                        <img src="./images/img_6.jpg" alt="ashless Payment">
+                        <h3 class="portfolio-item-subtitle">Cashless Payment</h3>
+                        <p class="portfolio-item-text">Marketing</p>
+                    </li>
+                    <li class="portfolio-menu-item">
+                        <img src="./images/img_7.jpg" alt="Meditation App">
+                        <h3 class="portfolio-item-subtitle">Meditation App</h3>
+                        <p class="portfolio-item-text">App</p>
+                    </li>
+                    <li>
+                        <img src="./images/img_8.jpg" alt="Taxi Service">
+                        <h3 class="portfolio-subtitle">Taxi Service</h3>
+                        <p class="portfolio-item-text">Marketing</p>
+                    </li>
+                    <li class="portfolio-menu-item">
+                        <img src="./images/img_9.jpg" alt="Screen Illustrations">
+                        <h3 class="portfolio-item-subtitle">Screen Illustrations</h3>
+                        <p class="portfolio-item-text">Design</p>
+                    </li>
+                    <li class="portfolio-menu-item">
+                        <img src="./images/img_10.jpg" alt="Online Courses">
+                        <h3 class="portfolio-item-subtitle">Online Courses</h3>
+                        <p class="portfolio-item-text">Marketing</p>
+                    </li>
+                </Ul>
+            </section>
+    </main> 
     <footer>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <a href="./index.html">WebStudio</a>
-        <p>Lorem, ipsum dolor.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="footer-logo"><span class="accent">Web</span>Studio</a>
     </footer>
 </body>
 </html>
