--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo"><Span class="accent">WEB</Span>STUDIO</a>
+            <a href="./index.html" class="header-logo">Web<span class="accent">studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
                 <a href="" class="header-menu-link">Studio</a>
@@ -132,9 +132,9 @@
                 </Ul>
             </section>
     </main> 
-    <footer>
+    <footer class="footer">
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <a href="./index.html" class="footer-logo"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
     </footer>
 </body>
 </html>
