--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo">Web<span class="accent">studio</span></a>
+            <a href="./index.html" class="header-logo">Web<span class="accent-header">studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
                 <a href="" class="header-menu-link">Studio</a>
@@ -134,7 +134,7 @@
     </main> 
     <footer class="footer">
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
+        <a href="./index.html" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
     </footer>
 </body>
 </html>
