--- a/index.html
+++ b/index.html
@@ -100,32 +100,37 @@
                 <h2 class="portfolio-header">Our Portfolio</h2>
                 <Ul class="portfolio-menu-list">
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_5.jpg" alt="Banking App">
+                        <img src="./images/img_5.jpg" alt="Banking App" class="portfolio-item-img"
+                        width="360">
                         <h3 class="portfolio-item-subtitle">Banking App</h3>
                         <p class="portfolio-item-text">App</p>
                     </li>
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_6.jpg" alt="ashless Payment">
+                        <img src="./images/img_6.jpg" alt="ashless Payment" class="portfolio-item-img"
+                        width="360">
                         <h3 class="portfolio-item-subtitle">Cashless Payment</h3>
                         <p class="portfolio-item-text">Marketing</p>
                     </li>
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_7.jpg" alt="Meditation App">
+                        <img src="./images/img_7.jpg" alt="Meditation App" class="portfolio-item-img"
+                        width="360">
                         <h3 class="portfolio-item-subtitle">Meditation App</h3>
                         <p class="portfolio-item-text">App</p>
                     </li>
                     <li>
-                        <img src="./images/img_8.jpg" alt="Taxi Service">
-                        <h3 class="portfolio-subtitle">Taxi Service</h3>
+                        <img src="./images/img_8.jpg" alt="Taxi Service" class="portfolio-item-img"
+                        width="360">
+                        <h3 class="portfolio-item-subtitle">Taxi Service</h3>
                         <p class="portfolio-item-text">Marketing</p>
                     </li>
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_9.jpg" alt="Screen Illustrations">
+                        <img src="./images/img_9.jpg" alt="Screen Illustrations" class="portfolio-item-img">
                         <h3 class="portfolio-item-subtitle">Screen Illustrations</h3>
                         <p class="portfolio-item-text">Design</p>
                     </li>
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_10.jpg" alt="Online Courses">
+                        <img src="./images/img_10.jpg" alt="Online Courses" class="portfolio-item-img"
+                        width="360">
                         <h3 class="portfolio-item-subtitle">Online Courses</h3>
                         <p class="portfolio-item-text">Marketing</p>
                     </li>
@@ -134,7 +139,8 @@
     </main> 
     <footer class="footer">
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <a href="./index.html" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
+        <a href="./index.html" class="footer-logo">Web<span class="footer-accent">Studio</span></a>
     </footer>
+    lldllldld
 </body>
 </html>
