--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo">Web<span class="accent-header">studio</span></a>
+            <a href="./index.html" class="header-logo">Web<span class="accent-header">Studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
                 <a href="" class="header-menu-link">Studio</a>
@@ -27,11 +27,11 @@
         </nav>
         <address class="header-adderes">
        <ul class="addres-menu-list">
-       <li class="addres-menu-item" class="header-menu-link">
+       <li class="addres-menu-item" class="addres-menu-link">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </li>
         <li class="addres-menu-item">
-            <a href="tel:+110001111111" class="header-menu-link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="addres-menu-link">+11 (000) 111-11-11</a>
         </li>
        </ul>
         </address>
@@ -124,7 +124,8 @@
                         <p class="portfolio-item-text">Marketing</p>
                     </li>
                     <li class="portfolio-menu-item">
-                        <img src="./images/img_9.jpg" alt="Screen Illustrations" class="portfolio-item-img">
+                        <img src="./images/img_9.jpg" alt="Screen Illustrations" class="portfolio-item-img"
+                        width="360">
                         <h3 class="portfolio-item-subtitle">Screen Illustrations</h3>
                         <p class="portfolio-item-text">Design</p>
                     </li>
@@ -141,6 +142,5 @@
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         <a href="./index.html" class="footer-logo">Web<span class="footer-accent">Studio</span></a>
     </footer>
-    lldllldld
 </body>
 </html>
