--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </nav>
         <address class="header-adderes">
        <ul class="addres-menu-list">
-       <li class="addres-menu-item" class="addres-menu-link">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+       <li class="addres-menu-item">
+        <a href="mailto:info@devstudio.com" class="addres-menu-link">info@devstudio.com</a>
     </li>
         <li class="addres-menu-item">
             <a href="tel:+110001111111" class="addres-menu-link">+11 (000) 111-11-11</a>
@@ -140,7 +140,7 @@
     </main> 
     <footer class="footer">
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <a href="./index.html" class="footer-logo">Web<span class="footer-accent">Studio</span></a>
+        <a href="./index.html" class="header-logo">Web<span class="footer-accent">Studio</span></a>
     </footer>
 </body>
 </html>
