--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </section>
     </main> 
     <footer class="footer">
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
