--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </section>
     </main> 
     <footer class="footer">
+        <a href="./index.html" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
         <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
